styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

html {
    scroll-behavior: smooth;
}

/* -------------- */
/* VIDEO Background */
/* -------------- */

.background__Container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    overflow: hidden;
}

.background {
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    top: 50%;
    left: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
    background-attachment: fixed;
}

/* -------------- */
/* NAVIGATION BAR */
/* -------------- */

.header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.9);
    color: #ddd;
    padding: 18px 18px;
    position: sticky;
    top: 0;
    z-index: 1000;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
    color: #ddd;
    font-size: 1.3em;
}

a:hover {
    text-decoration: underline;
    text-shadow: 0 0 0.9em rgb(255, 255, 255);
}

.left-side-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 16px;
    position: relative;
    z-index: 1;
}

.nav-image {
    height: 50px;
    width: auto;
}
.nav-image:hover {
    box-shadow: 0 0 0.6em white;
}

.nav-title {
    font-size: 24px;
    font-weight: 900;
}

.nav-title:hover {
    text-shadow: 0 0 0.9em rgb(255, 255, 255);
}

/* -------------- */
/* Hero image section*/
/* -------------- */

.hero-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 85%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    margin: 9em auto 0 auto;
    border-radius: 1.5em;
    box-shadow: 0 0 2em rgb(69, 69, 69);
}

.hero-left-side {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: #ddd;
}

.hero-title {
    font-size: 2.1em;
    margin-bottom: 1em;
    text-shadow: 0 0 0.8em rgb(255, 255, 255);
    text-align: center;
    width: 70%;
}

.hero-message {
    font-size: 1.1em;
    line-height: 1.7em;
    text-align: center;
    display: flex;
    justify-content: center;
}

.button-container {
    margin-top: 3em;
}

.hero-button {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-image: linear-gradient(
        rgba(36, 52, 76, 0.6),
        rgba(36, 52, 76, 0.9)
    );
    border: 0.2em solid white;
    border-radius: 1.2em;
    transition: 0.3s;
    width: 9em;
    height: 3em;
    margin: 0 auto;
    font-size: 1.2em;
    width: 100%;
    padding: 10px;
}

.hero-button:hover {
    box-shadow: 0 0 0.6em white;
}

.hero-right-side {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 5em 5em;
}

.hero-image {
    width: 35vw;
}

.photo-credit {
    color: #ddd;
    font-size: 1.3em;
}

/* -------------- */
/* Video BG credit source*/
/* -------------- */

.author-video-BG-credit {
    display: flex;
    justify-content: center;
    align-items: center;
    width: auto;
    margin-top: 15%;
    margin-bottom: 0;
}

.inner-background {
    background-color: black;
    justify-content: center;
    align-items: center;
    width: auto;
    padding: 10px;
}

.credit-text {
    color: #ddd;
    font-size: 20px;
    text-align: center;
}

/* -------------- */
/* Card section*/
/* -------------- */

.card-section {
    display: flex;
    justify-content: center;

    flex-direction: column;
    /* padding: 150px 0; */
    width: 100%;
    background-image: linear-gradient(
        rgba(36, 52, 76, 0.7),
        rgba(36, 52, 76, 0.7)
    );
    box-shadow: 0 0 0.6em #fff;
    z-index: 2;
}

.card-section__title {
    display: flex;
    justify-content: center;
    font-size: 2.1em;
    color: #ddd;
    margin-top: 1rem;
    text-shadow: 0 0 0.8em rgb(255, 255, 255);
}
.card-section__grid {
    display: flex;
    justify-content: center;
    gap: 5vw;
    margin-top: 2em;
    margin-bottom: 2rem;
}

.card {
    display: flex;
    flex-direction: column;
    text-align: center;

    /* width: 200px;
    height: 200px; */
    padding: 10px;
}

.card__text {
    color: #ddd;
    font-size: 20px;
    align-items: center;
    margin-top: 10%;
}

.card__image {
    max-width: 100%;
    height: auto;
    transition: transform 0.2s; /* Animation */
}

.card__image:hover {
    transform: scale(1.05);
    box-shadow: 0 5px 15px #fff;
}

/* -------------- */
/* card section credit source*/
/* -------------- */

.author__container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: auto;
    margin-bottom: 0;
}

.author__inner-background {
    background-color: black;
    justify-content: center;
    align-items: center;
    width: auto;
    padding: 5px;
}

.author__credit-text {
    color: #ddd;
    font-size: 18px;
    text-align: center;
    font-size: 20px;
}

/* -------------- */
/* 2nd background */
/* -------------- */

.second-background__container {
    background-image: url("./images/backgrounds/Jinshi1.png");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    min-height: 100vh;
    z-index: 1;
    position: relative;
}

.character__container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 4rem;
}

.character__quote {
    text-align: center;
    color: black;
    font-size: 2em;
    font-weight: bold;
    margin-top: 5%;
    text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.7);
}

.character {
    color: black;
    font-size: 2em;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(255, 0, 0, 0.7);
}
/* ... */

